--- a/src/features/specialization/components/specialization-card/specialization-card.scss
+++ b/src/features/specialization/components/specialization-card/specialization-card.scss
@@ -1,53 +1,19 @@
 .card {
   &-container {
-    min-height: 420px;
-    height: 380px;
+    min-height: 480px;
+    height: 420px;
     overflow: inherit;
-    background-image: #f7f8fa;
-    filter: drop-shadow(3px 2px 12px #bdc1d1) drop-shadow(-3px -3px 13px #fafbfc);
-    box-shadow: inset -0.6px -0.6px #f5f6fa;
+    background: rgb(255, 255, 255);
+    border: 1px solid rgb(232, 240, 245);
+    filter: drop-shadow(2px 2px 6px #8a8ea0);
+    border: 1px solid #cbccd4;
   }
 
   &-circle {
-    height: 150px;
+    text-align: center;
     overflow: hidden;
     width: 100%;
-
-    img {
-      height: auto;
-      width: 100%;
-      object-fit: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  }
-
-  &-content {
-    text-align: center;
-    margin-top: 20px;
-    min-height: 140px;
-    height: 180px;
-
-    p {
-      margin: 4px;
-      color: #5b5b98;
-      font-size: 13px;
-      font-weight: 400;
-    }
-  }
-
-  &-title {
-    margin: 14px;
-    text-align: center;
-    color: black;
-    font-weight: 700;
-    font-size: 16px;
-  }
-
-  &-footer {
-    height: 50px;
-    display: flex;
-    border-top: solid;
+    border-bottom: solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(
       270deg,
@@ -56,6 +22,39 @@
       rgba(66, 75, 77, 0)
     );
     border-width: 1px;
+    img {
+      height: auto;
+      width: 50%;
+      object-fit: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      filter: drop-shadow(10px 10px 8px black);
+    }
+  }
+
+  &-content {
+    text-align: center;
+    margin-top: 20px;
+    min-height: 140px;
+    p {
+      margin: 4px;
+      color: #5b5b98;
+      font-size: 14px;
+      font-weight: 400;
+    }
+  }
+
+  &-title {
+    margin: 16px;
+    text-align: center;
+    color: black;
+    font-weight: 700;
+    font-size: 18px;
+  }
+
+  &-footer {
+    height: 50px;
+    display: flex;
     align-items: center;
     justify-content: center;
     font-weight: 600;
@@ -64,7 +63,7 @@
 
   &-details {
     font-weight: 600;
-    font-size: 13px;
-    color: #260944;
+    font-size: 14px;
+    color: #070415;
   }
 }
