--- a/src/features/specialization/components/specilaization.scss
+++ b/src/features/specialization/components/specilaization.scss
@@ -7,7 +7,7 @@
   border-radius: 8px;
   filter: drop-shadow(2px 2px 6px #8a8ea0);
   &-title {
-    font-size: 1.5rem;
+    font-size: 28px;
     line-height: 1.8rem;
     font-weight: 500;
     color: #010c3f;
