--- a/src/features/requests/components/requests/requests.scss
+++ b/src/features/requests/components/requests/requests.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   box-shadow: none;
   border-radius: 10px;
-  padding: 30px;
+  padding: 40px 20px;
   margin: 20px;
 
   &-title {
@@ -14,5 +14,6 @@
     line-height: 1.8rem;
     font-weight: 500;
     color: #010c3f;
+    margin-bottom: 30px;
   }
 }
