--- a/src/features/dashboard/components/list-of-secretary/list-of-secretary.scss
+++ b/src/features/dashboard/components/list-of-secretary/list-of-secretary.scss
@@ -1,4 +1,4 @@
-.pie {
+.secretary {
   width: 100%;
   align-items: flex-start;
   display: flex;
@@ -6,28 +6,21 @@
   padding: 24px 32px;
   background: rgb(255, 255, 255);
   border: 1px solid rgb(232, 240, 245);
-  filter: drop-shadow(2px 2px 10px #8a8ea0);
+  filter: drop-shadow(2px 2px 6px #8a8ea0);
   box-sizing: border-box;
   border-radius: 8px;
   flex-direction: column;
   margin-bottom: 20px;
-
-  &-header {
-    border-bottom: 1px solid #eef0f7;
-    width: 100%;
-  }
-
-  &-title {
-    font-size: 1.1rem;
-    line-height: 1.4rem;
+  &-table-item {
+    font-size: 13px;
     font-weight: 400;
-    color: #010c3f;
-    margin-bottom: 10px;
-    width: 100%;
+    font-family: 'Poppins';
+    color: #19104f;
   }
-
-  &-chart {
-    margin-top: 20px;
-    width: 100%;
+  &-table-item-details {
+    font-size: 12px;
+    font-weight: 400;
+    font-family: 'Poppins';
+    color: #3d3f47;
   }
 }
