created request verification and students

--- a/src/layout/layout-header/navigation.scss
+++ b/src/layout/layout-header/navigation.scss
@@ -23,6 +23,7 @@
     text-shadow: 2px 2px 4px #b5bacc;
     padding: 0 8px;
     span {
+      margin-top: 4px;
       margin-right: 2px;
     }
     a {
@@ -36,7 +37,7 @@
     color: #24398c !important;
     padding: 0 16px;
     border-radius: 8px;
-    span {
+    svg {
       margin-right: 2px;
     }
   }
