--- a/src/features/specialization/components/specialization-card/specialization-card.scss
+++ b/src/features/specialization/components/specialization-card/specialization-card.scss
@@ -1,6 +1,6 @@
 .card {
   &-container {
-    min-height: 480px;
+    min-height: 420px;
     height: 420px;
     overflow: inherit;
     background: rgb(255, 255, 255);
@@ -8,20 +8,36 @@
     filter: drop-shadow(2px 2px 6px #8a8ea0);
     border: 1px solid #cbccd4;
   }
+  &-header {
+    position: absolute;
+    top: 32px;
+    right: 28px;
+    z-index: 111;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 18px;
+    font-weight: 600;
+    color: #ffff;
+    margin-bottom: 4px;
+  }
+  &-eye,
+  &-trash {
+    width: 30px;
+    text-align: center;
 
+    &:hover {
+      box-shadow: 0 3px 6px 0 rgb(0 0 0 / 6%);
+      transform: scale(1.1);
+    }
+  }
   &-circle {
+    position: relative;
     text-align: center;
     overflow: hidden;
     width: 100%;
-    border-bottom: solid;
-    border-image-slice: 1;
-    border-image-source: linear-gradient(
-      270deg,
-      rgba(66, 75, 77, 0),
-      #cdd2df 51.56%,
-      rgba(66, 75, 77, 0)
-    );
-    border-width: 1px;
+    padding: 10px;
+    border-radius: 4px;
+    background-image: linear-gradient(to right top, #051937, #052756, #093677, #154599, #2654bc);
     img {
       height: auto;
       width: 50%;
@@ -35,7 +51,7 @@
   &-content {
     text-align: center;
     margin-top: 20px;
-    min-height: 140px;
+    min-height: 120px;
     p {
       margin: 4px;
       color: #5b5b98;
