--- a/src/features/settings/components/settings/settings.scss
+++ b/src/features/settings/components/settings/settings.scss
@@ -11,7 +11,7 @@
   padding: 50px 30px;
   margin: 20px;
   &-container {
-    width: 60%;
+    width: 70%;
   }
   &-title {
     font-size: 26px;
@@ -20,7 +20,15 @@
     color: #010c3f;
     margin-bottom: 30px;
   }
-
+  &-section {
+    width: 100%;
+    border: 1px solid #cbccd4;
+    border-radius: 8px;
+    padding: 30px;
+    margin-top: 40px;
+    background-color: white;
+    filter: drop-shadow(2px 2px 6px #8a8ea0);
+  }
   &-table {
     margin-top: 50px;
     margin-bottom: 100px;
