--- a/src/features/user-profile/components/user-profile/user-profile.scss
+++ b/src/features/user-profile/components/user-profile/user-profile.scss
@@ -51,4 +51,11 @@
     font-size: 18px;
     font-weight: 500;
   }
+  &-email {
+    position: absolute;
+    top: 94px;
+    left: 10px;
+    font-size: 12px;
+    font-weight: 500;
+  }
 }
